[ios] More safe area fixes for iPhone X layout.

Bug: 789151, 789633
Change-Id: Ic0db7db4255f01d5875e0072707886746e58274a