ios/chrome/browser/ui/toolbar/web_toolbar_controller.mm
@@ -700,6 +700,11 @@ using ios::material::TimingFunction;
   clippingFrame.origin.y =
       [_webToolbar frame].size.height - clippingFrame.size.height;
   [_clippingView setFrame:clippingFrame];
+
+  if ([_locationBarView.textField isFirstResponder]) {
+    CGRect mobFrame = CGRectInset([_clippingView bounds], -2, -2);
+    [_omniboxBackground setFrame:mobFrame];
+  }
 }
 
 - (void)setUpButton:(UIButton*)button
@@ -1189,6 +1194,14 @@ using ios::material::TimingFunction;
     [_webToolbar setAutoresizesSubviews:NO];
     CGRect expandedFrame =
         RectShiftedDownAndResizedForStatusBar(self.contentView.bounds);
+    // Using -RectShiftedDownAndResizedForStatusBar can sometimes be wrong in
+    // an autolayout world, such as if the view is rotated with the app
+    // backgrounded. It's safer to use -SafeAreaInsetsForView.
+    if (IsSafeAreaCompatibleToolbarEnabled()) {
+      UIEdgeInsets safeAreaInsets = SafeAreaInsetsForView(self.contentView);
+      expandedFrame =
+          UIEdgeInsetsInsetRect(self.contentView.bounds, safeAreaInsets);
+    }
     [_webToolbar
         setFrame:growOmnibox ? expandedFrame : [self specificControlsArea]];
     [_webToolbar setAutoresizesSubviews:YES];
@@ -2048,6 +2061,15 @@ using ios::material::TimingFunction;
 - (void)layoutCancelButton {
   CGFloat height = CGRectGetHeight([self specificControlsArea]) -
                    kCancelButtonTopMargin - kCancelButtonBottomMargin;
+  // Using -specificControlsArea can sometimes be wrong in
+  // an autolayout world, such as if the view is rotated with the app
+  // backgrounded. It's safer to use -SafeAreaInsetsForView.
+  if (IsSafeAreaCompatibleToolbarEnabled()) {
+    UIEdgeInsets safeAreaInsets = SafeAreaInsetsForView(self.contentView);
+    height = CGRectGetHeight(UIEdgeInsetsInsetRect(self.contentView.bounds,
+                                                   safeAreaInsets)) -
+             kCancelButtonTopMargin - kCancelButtonBottomMargin;
+  }
   LayoutRect cancelButtonLayout;
   cancelButtonLayout.position.leading =
       CGRectGetWidth([_webToolbar bounds]) - height;
